--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-bluetooth-escpos-printer",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "React-Native plugin for the bluetooth ESC/POS printers.",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,7 @@
     "Bluetooth",
     "Printer"
   ],
-  "author": "janus j k lu",
+  "author": "ruiqi",
   "license": "MIT",
   "peerDependencies": {
     "react-native": ">=0.55.4"
