--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,6 +55,6 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.facebook.react:react-native:+'  // From node_modules
-    implementation "com.google.zxing:core:3.3.0"
-    implementation "androidx.core:core-ktx:+"
+    implementation "com.google.zxing:core:3.3.3"
+    implementation "androidx.core:core-ktx:1.6.0"
 }
